--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         </activity>
 
         <activity android:name=".home.activity.HomeArticleDetailActivity" />
+        <activity android:name=".home.activity.HomeArticleCommentActivity" />
     </application>
 
 </manifest>
