--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,9 @@
         </activity>
 
         <activity android:name=".home.activity.HomeArticleDetailActivity" />
-        <activity android:name=".home.activity.HomeArticleCommentActivity" />
+        <activity android:name=".home.activity.HomeArticleCommentActivity"
+            android:theme="@style/myTransparent"
+            />
     </application>
 
 </manifest>
