--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+
+
     <!--
     <uses-permission android:name="com.eebbk.bfc.ACCESS_BBK_DOWNLOAD_MANAGER" />
     <uses-permission android:name="com.eebbk.bfc.ACCESS_ALL_BBK_DOWNLOADS" />
