--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile files('libs/additionnal.jar')
     compile files('libs/commons-email-1.2.jar')
     compile files('libs/mail.jar')
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
