--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,8 +45,7 @@
 
         <activity android:name=".home.activity.HomeArticleCommentActivity"
             android:theme="@style/myTransparent"
-            android:windowSoftInputMode="adjustResize"
-            />
+            android:windowSoftInputMode="adjustResize" />
 
         <activity android:name=".home.activity.HomeArticleShareActivity"
             android:theme="@style/myTransparent" />
@@ -66,8 +65,7 @@
 
         <activity android:name="com.tencent.connect.common.AssistActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            />
+            android:configChanges="orientation|keyboardHidden|screenSize" />
 
 
     </application>
