--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         <activity android:name="com.mantianhong.home.activity.HomeArticleShareActivity"
             android:theme="@style/myTransparent" />
 
+        <activity android:name=".video.activity.VideoHomeFragmentVideoPlayerActivity" />
+
         <!-- QQ，QQ空间分享 -->
         <activity
             android:name="com.tencent.tauth.AuthActivity"
@@ -67,7 +69,11 @@
 
         <activity android:name="com.tencent.connect.common.AssistActivity"
             android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:configChanges="orientation|keyboardHidden|screenSize" />
+            android:configChanges="orientation|keyboardHidden|screenSize" /><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
     </application>
 
