--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,14 +34,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.mantianhong.home.activity.HomeActivity" />
 
-        <activity android:name="com.mantianhong.login.activity.LoginMainActivity">
+        <activity android:name="com.mantianhong.home.activity.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".login.activity.LoginMainActivity" />
 
         <activity android:name="com.mantianhong.home.activity.HomeArticleDetailActivity" />
 
